# ride-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  main.py  pyproject.toml
src/core/: settings.py  urls.py
src/ride/: models.py  urls.py
src/ride/api/v1/: filters.py  managers.py  models.py  pagination.py  serializers.py  urls.py  views.py
src/ride/migrations/: 0001_initial.py  0002_ride_ride_pickup_coords_ride_ride_dropoff_coords.py  0003_ride_event_ride_id_ride_description.py
src/user/: admin.py  models.py  urls.py
src/user/api/v1/: models.py  pagination.py  serializers.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
